@@ -27,3 +27,4 @@
 20041208 1.29 ^C at the "give me a clue" prompt works like "q to quit"
 20050121 1.30 test.pl uses Test::Simple
 20050831 1.31 test.pl uses warnings; oct/chr/ord confusion fixed in Clui.pm
+20050911 1.32 FileSelect.pm fix "sort interpreted as function" warning
